--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
 
+<!--
+    Assingment: Project Showcase Page
+    Course: COP2822c Web Technologies
+    Florida State College at Jacksonville FL (FSCJ)
+
+    Author: Rafael A Melendez
+    Date:   June 8th, 2024
+-->
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="utf-8" />
+    <title>Project Showcase Page</title>
+    <link href="psp_layout.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
+    
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
 
+    <section class="container">
+        <div class="left-column">
+            <h1>Welcome!</h1>
+
+            <p>To Rafael's Project Showcase Page. Where I will showcase my school work...</p>
+        </div>
+        <div class="right-column">
+            
+        </div>
+    </section>
+    <hr style="border: none; height: 2px; background-color: lightgrey;" />
+
+    <!-- wrapper align-center-->
+    <section class="wrapper">
+        <div class="left">
+            <img src="male-user64.png" alt="male user" />
+            <a href="aboutme.html"><h3>About Me</h3></a>
+        </div>
+        <div class="center">
+            <img src="workspace.png" alt="project pic" />
+            <h3>Projects</h3>
+        </div>
+        <div class="right">
+            <img src="college.png" alt="fscj" />
+            <a href="https://www.fscj.edu"><h3>My School</h3></a>
+        </div>
+
+    </section>
+    <hr style="border: none; height: 2px; background-color: lightgrey;" />
+
+    <footer>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/rafael-a-melendez/">LinkedIn</a></li>
+        </ul>
+        <p>&copy: Design: Rafael A Melendez, Jacksonville, FL 32258</p>
+    </footer>
+
+</body>
 </html>
